<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 商品列表界面 -->
    <string name="shopping_title">ONLINE STORE</string>
    <string name="shoping_head">PRODUCT</string>
    <string name="shopping_like">Seletc your favourite product</string>
    <string name="shopping_more">...more result</string>   
    <string name="shpping_select_btn">SELECT</string> 
    
    <!-- 商品详细界面 -->
    <string name="product_detail_head">MERCHANDISE DISPLAY:</string>
    <string name="product_detail_name">NAME:</string>
    <string name="product_detail_price">PRICE:</string>
    <string name="product_detail_old_price">PRICE:</string>
    <string name="product_detail_model">MODEL:</string>
    <string name="product_detail_color">COLOR:</string>
    <string name="product_detail_quantity">QUANTITY:</string>
    <string name="product_detail_graphic_details">GRAPHIC DETAILS:</string>
    
    <!-- 登陆 界面 -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_login">LOGIN</string>
    <string name="login_no_account">Do not have an account?</string>
    <string name="login_no_sign_up">SIGN UP</string>
    
    <!-- 注册界面 -->
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_user_type">User type</string>
    <string name="reister_fill_the_mechine_id">Fill the machine ID</string>
    <string name="register_general_user">GENERAL USER</string>
    <string name="register_winery_user">WINERY USER</string>
    <string name="vip">VIP</string>
    <string name="distributor">DISTRIBUTOR</string>
    <string name="register_sign_up_now">sign up now</string>
    
    <!-- 关于界面 -->
    <string name="about_title">ABOUT</string>
    <string name="about_terms_of_service">Terms of Service</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_websit">www.ifavine.com</string>
    <string name="about_ifavine_inc">IFAVINE Inc.(USA)</string>
    <string name="about_ifavine_sas">IFAVINE S.A.S(France)</string>
    <string name="about_top_group">Top Group(China)</string>
    <string name="about_copy_right">copyright @ 2014 All rights reserved.</string>
    
    <!-- 帮助界面 -->
    <string name="help_title">HELP</string>
    <string name="help_instructions">Instructions</string>
    <string name="help_faqs">FAQS</string>
    <string name="help_customer_service">Customer Service:help@ifavine.com</string>
    
    
    
     <string name="app_name">chateau</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <!-- actionbar -->
    <string name="action_bar_login_in">LOG IN</string>
    <string name="action_bar_online_store">ONLINE STORE</string>
    <string name="action_bar_personal_center">Personal Center</string>

    
    <!-- 标题 -->
    <string name="title_login_in">LOG IN</string>
    <string name="title_sign_up">SIGN UP</string>
    <string name="title_translating">TRANSLATING</string>

    
    <!-- 子标题 -->
    <string name="sub_title_login">\t Visiting details and sharing  \n    the feedback with your own profile</string>

    
    
    
    
    <!-- 个人中心  -->
    <string name="personal_aliases">Aliases:</string>
    <string name="personal_email">E-mail:</string>
    <string name="personal_my_order">My Order</string>
    <string name="personal_my_comments">My comments</string>
    <string name="personal_my_favorites">My Favorites</string>
    <string name="personal_my_cart">My Cart</string>
    <string name="personal_delivery_address">Delivery Address</string>
    <string name="personal_option_icon">> \t\t</string>
    
    <string name="personal_collection_delete">DELETE</string>
    <string name="sub_title_personal_mycart">\t Pending payment of goods \n \t to confirm payment</string>
    
	<!-- 选择相片 -->
    <string name="select_pic_pictures">Pictures</string>
    <string name="select_pic_album">From the album solve</string>
    <string name="select_pic_cancel">Cancel</string>
    
    
    <!-- 个人中心  -->
    <string name="personal_mycart_delete">DELETE</string>
    <string name="personal_mycart_sellement">SELLEMENT</string>
    <string name="personal_mycart_continue_shopping">CONTINUE SHOPPING</string>
    
    
    <string name="personal_clip_image_cancel">Cancel</string>
    <string name="personal_clip_image_ok">OK</string>
    
    <!-- 填写  收货地址界面-->
	<string name="personal_shopping_name">NAME</string>
	<string name="personal_shopping_mobile">MOBILE\nNUMBER</string>
	<string name="personal_shopping_phone">PHONE\nNUMBER</string>
	<string name="personal_shopping_address_info">ADDRESS INFORMATION</string>
	<string name="personal_shopping_state">STATE</string>
	<string name="personal_shopping_provinces">PROVINCES</string>
	<string name="personal_shopping_citys">CITYS</string>
	<string name="personal_shopping_counties">COUNTIES</string>
	<string name="personal_shopping_streets">STREET</string>
	<string name="personal_shopping_save">SAVE ADDRESS INFORMATION</string>
</resources>
