<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main" >

    <RelativeLayout
        android:id="@+id/aboutTitleBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_head" >

        <RelativeLayout
            android:id="@+id/action_bar_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp" >

            <ImageView
                android:id="@+id/action_bar_left_imageview"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@drawable/about_back" />

            <ImageView
                android:id="@+id/action_bar_right_imageview"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/btn_right_menu" />

            <TextView
                android:id="@+id/action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/action_bar_left_imageview"
                android:text="@string/about_title"
                android:textColor="@color/black"
                android:textSize="@dimen/action_bar_text_size" />
        </RelativeLayout>

        <TextView
            android:id="@+id/action_bar_main_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/action_bar_relative_layout"
            android:background="@drawable/bg_title_main"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/about_title"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <!-- 这里存放about的内容 -->

    <LinearLayout
        android:id="@+id/about_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutTitleBar"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/about_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/about_not_selected"
            android:gravity="center"
            android:text="@string/about_terms_of_service"
            android:textColor="@color/black"
            android:textSize="@dimen/about_text_size"
            android:layout_marginTop="30dp"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/about_not_selected"
            android:gravity="center"
            android:text="@string/about_privacy_policy"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:textSize="@dimen/about_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_websit"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/about_websit_text_size" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/about_copy_right"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:textSize="@dimen/about_copyright_text_size" />
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        >
        <TextView 
            android:text="@string/about_ifavine_inc"
            android:textSize="@dimen/about_footer_size"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            />
        
        <TextView 
            android:text="@string/about_ifavine_sas"
            android:textSize="@dimen/about_footer_size"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView 
            android:text="@string/about_top_group"
            android:textSize="@dimen/about_footer_size"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            />
    </RelativeLayout>

</RelativeLayout>